--- a/Spotify Project.ipynb
+++ b/Spotify Project.ipynb
@@ -86,9 +86,9 @@
     }
    ],
    "source": [
-    "CLIENT_ID = \"ddf0ccfe7d38484194efc5f1031f48f1\"\n",
-    "CLIENT_SECRET = \"1cd9bbf548a7414cb7f1f28b1a863be6\"\n",
-    "REDIRECT_URI = \"http://127.0.0.1:8248/callback\"\n",
+    "CLIENT_ID = #Your Client ID,
+    "CLIENT_SECRET = Your Client Secret,
+    "REDIRECT_URI = Your Redirect URI,
     "scope = \"user-read-recently-played\"\n",
     "\n",
     "sp = spotipy.Spotify(auth_manager=SpotifyOAuth(\n",
